<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Military Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="enable_milcam_switch_text">Enable Military Camera</string>
    <string name="empty_settings_toast_text">Can\'t enable with empty settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="backend_url_input_hint">Backend URL</string>
    <string name="get_device_id_button_text">Get ID</string>
    <string name="device_id_text">Device unique identifier</string>
    <string name="get_device_id_toast_text">Error getting device unique identifier</string>
    <string name="save_settings_buttons_text">Save settings</string>
    <string name="save_empty_settings_toast_text">Can\'t save empty settings</string>
    <string name="make_photo_interval_text">Make photo interval</string>
    <string name="settings_saved_toast_text">Settings saved</string>
    <string name="author_text_text"><![CDATA[Anonymous Ukrainian Patriot <anonymous.ukrainian.patriot@gmail.com>]]></string>

</resources>
