<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="patriot.ukrainian.anonymous.milcam.SettingsActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backendURLInput"
        android:hint="@string/backend_url_input_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textUri" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_device_id_button_text"
        android:id="@+id/getDeviceIDButton"
        android:onClick="getDeviceIDButtonClick"
        android:layout_below="@+id/deviceIDText"
        android:layout_alignRight="@+id/deviceIDText"
        android:layout_alignEnd="@+id/deviceIDText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deviceIDText"
        android:inputType="text"
        android:hint="@string/device_id_text"
        android:layout_below="@+id/backendURLInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/backendURLInput"
        android:layout_alignEnd="@+id/backendURLInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings_buttons_text"
        android:id="@+id/saveSettingsButton"
        android:onClick="saveSettingsButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/make_photo_interval_text"
        android:id="@+id/makePhotoIntervalText"
        android:inputType="number"
        android:layout_below="@+id/getDeviceIDButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/makePhotoIntervalPicker"
        android:layout_toStartOf="@+id/makePhotoIntervalPicker" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/makePhotoIntervalPicker"
        android:layout_toStartOf="@+id/makePhotoIntervalPicker"
        android:layout_below="@+id/getDeviceIDButton"
        android:layout_alignRight="@+id/getDeviceIDButton"
        android:layout_alignEnd="@+id/getDeviceIDButton" />

</RelativeLayout>
